--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -7,6 +7,12 @@ FetchContent_Declare(
 )
 
 FetchContent_Declare(
+  tatami_stats
+  GIT_REPOSITORY https://github.com/tatami-inc/tatami_stats
+  GIT_TAG master # ^1.1.0
+)
+
+FetchContent_Declare(
   WeightedLowess 
   GIT_REPOSITORY https://github.com/LTLA/CppWeightedLowess
   GIT_TAG master # ^2.0.0
@@ -19,5 +25,6 @@ FetchContent_Declare(
 )
 
 FetchContent_MakeAvailable(tatami)
+FetchContent_MakeAvailable(tatami_stats)
 FetchContent_MakeAvailable(WeightedLowess)
 FetchContent_MakeAvailable(scran_core_utils)
