--- a/extern/CMakeLists.txt
+++ b/extern/CMakeLists.txt
@@ -19,12 +19,12 @@ FetchContent_Declare(
 )
 
 FetchContent_Declare(
-  scran_core_utils
-  GIT_REPOSITORY https://github.com/libscran/core_utils
-  GIT_TAG master
+  scran_blocks
+  GIT_REPOSITORY https://github.com/libscran/scran_blocks
+  GIT_TAG master # ^1.0.0
 )
 
 FetchContent_MakeAvailable(tatami)
 FetchContent_MakeAvailable(tatami_stats)
 FetchContent_MakeAvailable(WeightedLowess)
-FetchContent_MakeAvailable(scran_core_utils)
+FetchContent_MakeAvailable(scran_blocks)
