--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,26 +6,42 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(scran_tests)
 
+include(GoogleTest)
+
+option(CODE_COVERAGE "Enable coverage testing" OFF)
+set(DO_CODE_COVERAGE OFF)
+if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
+    set(DO_CODE_COVERAGE ON)
+endif()
+
+macro(decorate_test target)
+    target_link_libraries(
+        ${target}
+        scran_variances
+        scran_tests
+    )
+
+    target_compile_options(${target} PRIVATE -Wall -Werror -Wpedantic -Wextra)
+
+    if(DO_CODE_COVERAGE)
+        target_compile_options(${target} PRIVATE -O0 -g --coverage)
+        target_link_options(${target} PRIVATE --coverage)
+    endif()
+
+    gtest_discover_tests(${target})
+endmacro()
+
 add_executable(
     libtest 
     src/fit_variance_trend.cpp
     src/model_gene_variances.cpp
     src/choose_highly_variable_genes.cpp
 )
+decorate_test(libtest)
 
-target_link_libraries(
-    libtest
-    scran_variances
-    scran_tests
+add_executable(
+    cuspartest
+    src/model_gene_variances.cpp
 )
-
-target_compile_options(libtest PRIVATE -Wall -Werror -Wpedantic -Wextra)
-
-option(CODE_COVERAGE "Enable coverage testing" OFF)
-if(CODE_COVERAGE AND CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
-    target_compile_options(libtest PRIVATE -O0 -g --coverage)
-    target_link_options(libtest PRIVATE --coverage)
-endif()
-
-include(GoogleTest)
-gtest_discover_tests(libtest)
+decorate_test(cuspartest)
+target_compile_definitions(cuspartest PRIVATE SUBPAR_CUSTOM_PARALLELIZE_RANGE=::subpar::test_parallelize_range)
