--- a/cmake/Config.cmake.in
+++ b/cmake/Config.cmake.in
@@ -6,5 +6,6 @@ find_dependency(tatami_tatami_stats 2.0.0 CONFIG REQUIRED)
 find_dependency(ltla_WeightedLowess 2.0.0 CONFIG REQUIRED)
 find_dependency(libscran_scran_blocks 0.1.0 CONFIG REQUIRED)
 find_dependency(ltla_sanisizer 0.1.0 CONFIG REQUIRED)
+find_dependency(libscran_topicks 0.1.0 CONFIG REQUIRED)
 
 include("${CMAKE_CURRENT_LIST_DIR}/libscran_scran_variancesTargets.cmake")
